cambiando la estructura de los modelos categoria y multimedia
