# modelos/categoria_model.py
@@ -6,6 +6,6 @@ class Categoria(db.Model):
 
     id_categoria = db.Column(db.String, primary_key=True, default=lambda: str(uuid.uuid4()))
     descripcion = db.Column(db.String(50), nullable=False)
+    eslogan     = db.Column(db.String(100))
     id_multimedia = db.Column(db.String, db.ForeignKey('multimedia.id_multimedia'), nullable=True)
-    multimedia = db.relationship('Multimedia', back_populates='categoria') # Relacion uno a uno
-    posts      = db.relationship('Post',secondary='posts_categorias', back_populates='categorias')  # Relacion con Post
+    
