# modelos/post_model.py
@@ -12,12 +12,11 @@ class Post(db.Model):
     contenido  = db.Column(db.String, nullable=False)
     id_usuario = db.Column(db.String(36), db.ForeignKey('usuarios.id_usuario', ondelete='CASCADE'), nullable=False)
     id_pais    = db.Column(db.String, db.ForeignKey('paises.id_pais', ondelete='RESTRICT'), nullable=False, default= lambda: str(uuid.uuid4()))
-    multimedia = db.relationship('Multimedia', back_populates='post', lazy=True)
     fecha_publicacion = db.Column(db.DateTime, default=datetime.now(timezone.utc))
     visible     = db.Column(db.Boolean, default=True)
     autor       = db.relationship('Usuario', back_populates='posts')
     pais        = db.relationship('Pais', back_populates='posts', lazy=True)   # Relacion con el modelo Pais(posts)
-    categorias  = db.relationship('Categoria', secondary='posts_categorias', back_populates='posts') 
+    
     favoritos   = db.relationship('Favorito', back_populates='post', cascade='all, delete-orphan', passive_deletes=True)
     status     =  db.Column(db.Boolean, default=True)
 
